--- a/example/react_test/index.html
+++ b/example/react_test/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
 
-    <title>Test</title>
+    <title>React Test</title>
 
     <script type="application/javascript" async src="index.js"></script>
 
