--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -24,6 +24,7 @@
     <div id="virt-app"></div>
     <div id="react-app"></div>
     <div id="virtual-dom-app"></div>
+    <div id="status"><p>Running</p></div>
 
     <script type="application/javascript" src="index.js"></script>
 
