--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -17,7 +17,7 @@
 
     <title>Test</title>
 
-    <script type="application/javascript" async src="index.js"></script>
+    <script type="text/javascript" async src="index.js"></script>
 
   </head>
 
