--- a/examples/workers/index.html
+++ b/examples/workers/index.html
@@ -23,7 +23,7 @@
 
     <div id="app"></div>
 
-    <script type="application/javascript" src="index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 
   </body>
 
