--- a/examples/input_events/index.html
+++ b/examples/input_events/index.html
@@ -17,7 +17,9 @@
 
     <title>Test</title>
 
-    <script type="application/javascript" async src="index.js"></script>
+    <link href="index.css" rel="stylesheet"/>
+
+    <script type="text/javascript" async src="index.js"></script>
 
   </head>
 
