--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 
         <ul>
           <li><a href="http://nathanfaucett.github.io/virt-dom/examples/components">Components</a></li>
+          <li><a href="http://nathanfaucett.github.io/virt-dom/examples/input_events">Input Events</a></li>
           <li><a href="http://nathanfaucett.github.io/virt-dom/examples/replace">Replace</a></li>
-          <li><a href="http://nathanfaucett.github.io/virt-dom/examples/test">Test</a></li>
+          <li><a href="http://nathanfaucett.github.io/virt-dom/examples/simple">Simple Test</a></li>
           <li><a href="http://nathanfaucett.github.io/virt-dom/examples/worker_form">Components with Workers</a></li>
-          <li><a href="http://nathanfaucett.github.io/virt-dom/examples/workers">Test with Workers</a></li>
+          <li><a href="http://nathanfaucett.github.io/virt-dom/examples/workers">Simple Test with Workers</a></li>
         </ul>
 
       </section>
@@ -55,7 +56,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
