--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a id="virt-dom" class="anchor" href="#virt-dom" aria-hidden="true"><span class="octicon octicon-link"></span></a>virt DOM</h1>
 
-<p>virt DOM for the browser and node.js</p>
+    <p>virt DOM is an adapter for the virt library, virt is a React like library that emits views as JSON that an adapter can use to render to some view system, in this case the DOM.</p>
 
         <ul>
           <li><a href="http://nathanfaucett.github.io/virt-dom/examples/components">Components</a></li>
