--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a id="virt-dom" class="anchor" href="#virt-dom" aria-hidden="true"><span class="octicon octicon-link"></span></a>virt DOM</h1>
 
-    <p>virt DOM is an adapter for the virt library, virt is a React like library that emits views as JSON that an adapter can use to render to some view system, in this case the DOM.</p>
+    <p>virt DOM is an adapter for the <a href="https://github.com/nathanfaucett/js-virt" target="_blank">virt</a> library, <a href="https://github.com/nathanfaucett/js-virt" target="_blank">virt</a> is a React like library that emits views as JSON that an adapter can use to render to some view system, in this case the DOM.</p>
 
           <h2>Install using npm</h2>
 <pre class="code bash">
@@ -54,12 +54,12 @@ $ yarn add @nathanfaucett/virt-dom --save
 
           <h3>Some technical examples</h3>
           <ul>
-            <li><a href="http://nathanfaucett.github.io/virt-dom/examples/components" target="_blank">Components</a></li>
-            <li><a href="http://nathanfaucett.github.io/virt-dom/examples/input_events" target="_blank">Input Events</a></li>
-            <li><a href="http://nathanfaucett.github.io/virt-dom/examples/replace" target="_blank">Replace</a></li>
-            <li><a href="http://nathanfaucett.github.io/virt-dom/examples/simple" target="_blank">Simple Example</a></li>
-            <li><a href="http://nathanfaucett.github.io/virt-dom/examples/worker_form" target="_blank">Components with Workers</a></li>
-            <li><a href="http://nathanfaucett.github.io/virt-dom/examples/workers" target="_blank">Simple Example with Workers</a></li>
+            <li><a href="http://nathanfaucett.github.io/js-virt-dom/examples/components" target="_blank">Components</a></li>
+            <li><a href="http://nathanfaucett.github.io/js-virt-dom/examples/input_events" target="_blank">Input Events</a></li>
+            <li><a href="http://nathanfaucett.github.io/js-virt-dom/examples/replace" target="_blank">Replace</a></li>
+            <li><a href="http://nathanfaucett.github.io/js-virt-dom/examples/simple" target="_blank">Simple Example</a></li>
+            <li><a href="http://nathanfaucett.github.io/js-virt-dom/examples/worker_form" target="_blank">Components with Workers</a></li>
+            <li><a href="http://nathanfaucett.github.io/js-virt-dom/examples/workers" target="_blank">Simple Example with Workers</a></li>
           </ul>
 
           <h3>Simple Example Usage</h3>
