--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@ Item.prototype.render = function() {
 virtDOM.render(virt.createView(List), document.getElementById("app"));
         </pre>
 
+          <h3>Web Worker Example</h3>
+
           <h3>Main thread</h3>
 <pre class="code javascript">
 var virtDOM = require("@nathanfaucett/virt-dom/src/worker/client");
