--- a/index.html
+++ b/index.html
@@ -19,15 +19,12 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/nathanfaucett/virt-dom">View on GitHub</a>
-
-          <h1 id="project_title">virt</h1>
-          <h2 id="project_tagline">a tool for creating interactive UIs</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/nathanfaucett/virt-dom/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/nathanfaucett/virt-dom/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+          <h1 id="project_title">VIRT DOM</h1>
+          <div id="npm_install">
+            <p>npm install @nathanfaucett/virt --save</p>
+            <p>npm install @nathanfaucett/virt-dom --save</p>
+          </div>
+          <p>&nbsp;</p>
         </header>
     </div>
 
@@ -51,15 +48,6 @@
         changes to the DOM over a WebSocket, a WebWorker or from the main javascript thread.
         Examples of all three are below.
       </p>
-
-          <h2>Install using npm</h2>
-<div class="ace-editor code bash">$ npm install @nathanfaucett/virt --save
-$ npm install @nathanfaucett/virt-dom --save
-</div>
-          <h2>Install using yarn</h2>
-<div class="ace-editor code bash">$ yarn add @nathanfaucett/virt --save
-$ yarn add @nathanfaucett/virt-dom --save
-</div>
 
           <h3>Real World Example</h3>
           <p>
@@ -293,16 +281,18 @@ socket.on("error", function(error) {
     console.log(error);
 });
 </div>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
       </section>
     </div>
+
+    <p>&nbsp;</p>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">virt DOM maintained by <a href="https://github.com/nathanfaucett">nathanfaucett</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">
+          <a href="https://github.com/nathanfaucett/js-virt-dom" target="_blank">virt-dom</a> maintained by
+          <a href="https://github.com/nathanfaucett">nathanfaucett</a>
+        </p>
       </footer>
     </div>
 
